--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test-1</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">60,132</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Default test-0</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">82,642</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">142,774</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">50,004</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test-1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.apidemos.LaunchAndroidApp</td><td><a href="#m0">navigateApp</a></td><td rowspan="1">1699512456894</td><td rowspan="1">32215</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Default test-0 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.apidemos.LaunchAndroidApp</td><td><a href="#m1">navigateApp</a></td><td rowspan="1">1699512462093</td><td rowspan="1">49693</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.apidemos.LaunchAndroidApp</td><td><a href="#m0">navigateApp</a></td><td rowspan="1">1699581485946</td><td rowspan="1">27651</td></tr></tbody>
 </table>
-<h2>Default test-1</h2><h3 id="m0">com.apidemos.LaunchAndroidApp#navigateApp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Default test-0</h2><h3 id="m1">com.apidemos.LaunchAndroidApp#navigateApp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.apidemos.LaunchAndroidApp#navigateApp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
