--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74a673">  <td>23/11/09 14:47:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchAndroidApp.navigateApp()[pri:0, instance:com.apidemos.LaunchAndroidApp@47e4d9d0]">navigateApp</td> 
-  <td>Default test-0@0@468033320</td>   <td></td> </tr>
-<tr bgcolor="699491">  <td>23/11/09 14:48:32</td>   <td>50066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppiumTest.tearDown()[pri:0, instance:com.apidemos.LaunchAndroidApp@47e4d9d0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>navigateApp@0@468033320</td>   <td></td> </tr>
-<tr bgcolor="699491">  <td>23/11/09 14:47:11</td>   <td>-30097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppiumTest.setUp()[pri:0, instance:com.apidemos.LaunchAndroidApp@47e4d9d0]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>Default test-0@0@468033320</td>   <td></td> </tr>
-<tr bgcolor="699491">  <td>23/11/09 14:47:11</td>   <td>-30097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppiumTest.setUp()[pri:0, instance:com.apidemos.LaunchAndroidApp@5f80fa43]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>Default test-1@1@356338363</td>   <td></td> </tr>
-<tr bgcolor="699491">  <td>23/11/09 14:48:09</td>   <td>27375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppiumTest.tearDown()[pri:0, instance:com.apidemos.LaunchAndroidApp@5f80fa43]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>navigateApp@1@356338363</td>   <td></td> </tr>
-<tr bgcolor="74a673">  <td>23/11/09 14:47:36</td>   <td>-5199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchAndroidApp.navigateApp()[pri:0, instance:com.apidemos.LaunchAndroidApp@5f80fa43]">navigateApp</td> 
-  <td>Default test-1@1@356338363</td>   <td></td> </tr>
+<tr bgcolor="8e61a3">  <td>23/11/10 09:57:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AppiumTest.setUp()[pri:0, instance:com.apidemos.LaunchAndroidApp@54dcfa5a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2101527076</td>   <td></td> </tr>
+<tr bgcolor="c4e8b2">  <td>23/11/10 09:58:05</td>   <td>20922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchAndroidApp.navigateApp()[pri:0, instance:com.apidemos.LaunchAndroidApp@54dcfa5a]">navigateApp</td> 
+  <td>main@2101527076</td>   <td></td> </tr>
+<tr bgcolor="8e61a3">  <td>23/11/10 09:58:33</td>   <td>48576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AppiumTest.tearDown()[pri:0, instance:com.apidemos.LaunchAndroidApp@54dcfa5a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@2101527076</td>   <td></td> </tr>
 </table>
